--- a/TODO.txt
+++ b/TODO.txt
@@ -13,6 +13,8 @@ memset:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/nds32/memset.S (2.33 KB)
 	sh:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/sh/sh4/memset.S (2.57 KB)
+	xtensa:
+		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/xtensa/memset.S (3.51 KB)
 	generic:
 		donex86x64:
 			https://raw.githubusercontent.com/blanham/PDCLib/master/functions/string/memset.c (764 B)
