--- a/TODO.txt
+++ b/TODO.txt
@@ -1,24 +1,53 @@
 memset:
+	aarch64:
+		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/aarch64/memset.S (4.09 KB)
+	arc:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arc/memset.S (3.34 KB)
+	avr32:
+		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/avr32/memset.S (898 B)
 	cris:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/cris/memset.c (7.28 KB)
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/cris/memset.c (9.54 KB)
+	ft32:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/ft32/memset.S (1.02 KB)
+	hppa:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/hppa/memset.S (2.03 KB)
 	ia64:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/ia64/memset.S (10.30 KB)
 	mips:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/mips/memset.S (12.66 KB)
-	avr32:
-		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/avr32/memset.S (898 B)
 	metag:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/metag/memset.S (2.35 KB)
 	nds32:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/nds32/memset.S (2.33 KB)
+	powerpc:
+		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/powerpc/memset.c (1.73 KB)
+	rx:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/rx/memset.S (156 B)
 	sh:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/sh/memset.S (3.12 KB)
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/sh/sh4/memset.S (2.57 KB)
+	sparc:
+		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/sparc/sparc32/memset.S (3.44 KB)
+	spu:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/spu/memset.c (2.87 KB)
 	xtensa:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/xtensa/memset.S (3.51 KB)
+	z8k:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/z8k/memset.S (1.86 KB)
 	generic:
 		donex86x64:
 			https://raw.githubusercontent.com/blanham/PDCLib/master/functions/string/memset.c (764 B)
 			https://raw.githubusercontent.com/NuxiNL/cloudlibc/master/src/libc/string/memset.c (775 B)
 		notDone:
-			https://gitlab.com/sortix/sortix/raw/master/libc/string/memset.c (2.21 KB)
 			https://raw.githubusercontent.com/dryc/libc11/master/src/string/memset.c (481 B)
+			https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/string/memset.c (2.03 KB)
+			https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/generic/memset.c (2.17 KB)
+			https://gitlab.com/sortix/sortix/raw/master/libc/string/memset.c (2.21 KB)
+
+memcpy:
+memcmp:
+strlen:
+strcmp:
+
+bitTwiddlingAlgos:
