--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,15 @@
 memset:
 	aarch64:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/aarch64/memset.S (4.09 KB)
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/aarch64/memset.S (6.61 KB)
 	arc:
-		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arc/memset-bs.S (4.45 KB)
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arc/memset.S (3.34 KB)
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arc/memset-archs.S (3.77 KB)
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arc/memset-bs.S (4.45 KB)
+	arm:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arm/aeabi_memset-arm.S (2.52 KB)
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arm/aeabi_memset-thumb2.S (2.53 KB)
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arm/aeabi_memset-thumb.S (2.68 KB)
 	avr32:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/avr32/memset.S (898 B)
 	cris:
@@ -12,6 +18,7 @@ memset:
 	ft32:
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/ft32/memset.S (1.02 KB)
 	h8300:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/h8300/reg_memset.S (319 B)
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/h8300/memset.S (1.6 KB)
 	hppa:
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/hppa/memset.S (2.03 KB)
@@ -24,8 +31,10 @@ memset:
 	metag:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/metag/memset.S (2.35 KB)
 	mips:
-		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/mips/memset.S (13.33 KB)
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/mips/memset.S (12.66 KB)
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/mips/memset.S (13.33 KB)
+	mn10300:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/mn10300/memset.S (1.78 KB)
 	nds32:
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/nds32/memset.S (2.96 KB)
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/nds32/memset.S (2.33 KB)
@@ -36,13 +45,15 @@ memset:
 	rx:
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/rx/memset.S (156 B)
 	sh:
-		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/sh/memset.S (3.12 KB)
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/sh/sh4/memset.S (2.57 KB)
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/sh/memset.S (3.12 KB)
 	sparc:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/sparc/sparc32/memset.S (3.44 KB)
 	spu:
-		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/spu/memset.c (2.87 KB)
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/spu/memset_ea.c (2.13 KB)
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/spu/memset.c (2.87 KB)
+	xscale:
+		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/xscale/memset.c (1.66 KB)
 	xtensa:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/xtensa/memset.S (3.51 KB)
 	visium:
