--- a/TODO.txt
+++ b/TODO.txt
@@ -8,9 +8,12 @@ memset:
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arc/memset-bs.S (4.45 KB)
 	arm:
 		https://git.musl-libc.org/cgit/musl/plain/src/string/arm/__aeabi_memset.s (578 B)
+		https://raw.githubusercontent.com/Olde-Skuul/doom3do/master/lib/string/memset.s (2.24 KB)
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arm/aeabi_memset-arm.S (2.52 KB)
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arm/aeabi_memset-thumb2.S (2.53 KB)
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/arm/aeabi_memset-thumb.S (2.68 KB)
+	avr:
+		https://raw.githubusercontent.com/vancegroup-mirrors/avr-libc/master/avr-libc/libc/string/memset.S (2.67 KB)
 	avr32:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/avr32/memset.S (898 B)
 	cris:
@@ -27,8 +30,15 @@ memset:
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/i960/memset.S (3.88 KB)
 	ia64:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/ia64/memset.S (10.3 KB)
+	m6502:
+		https://raw.githubusercontent.com/itszor/gcc-6502-bits/master/libtinyc/memset.S (467 B)
+		https://raw.githubusercontent.com/cc65/cc65/master/libsrc/geos-common/memory/fillram.s (486 B)
+		https://raw.githubusercontent.com/cc65/cc65/master/libsrc/pce/memset.s (2.32 KB)
+		https://raw.githubusercontent.com/cc65/cc65/master/libsrc/common/memset.s (3.1 KB)
 	m68k:
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/m68k/memset.S (2.44 KB)
+	mcs51:
+		https://raw.githubusercontent.com/KnightOS/kcc/master/device/lib/_memset.c (5.34 KB)
 	metag:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/metag/memset.S (2.35 KB)
 	mips:
@@ -53,12 +63,22 @@ memset:
 	spu:
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/spu/memset_ea.c (2.13 KB)
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/spu/memset.c (2.87 KB)
+	x86-16:
+		https://github.com/lkundrak/dev86/blob/master/libc/string/string.c (1.1 KB)
+		https://raw.githubusercontent.com/SpookyVerkauferin/libc/master/libc/source/string.asm (1.1 KB)
+		https://raw.githubusercontent.com/oded8bit/Assembly-Lib/3c8d8e3fd829a20dd88a086d9933f1595c3ea97c/UtilLib/mem.asm (1.8 K)
 	xscale:
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/xscale/memset.c (1.66 KB)
 	xtensa:
 		https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/xtensa/memset.S (3.51 KB)
 	visium:
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/visium/memset.c (13.99 KB)
+	z80:
+		https://raw.githubusercontent.com/z88dk/z88dk/master/libsrc/_DEVELOPMENT/string/c/sdcc_ix/memset_callee.asm (220 B)
+		https://raw.githubusercontent.com/z88dk/z88dk/master/libsrc/_DEVELOPMENT/string/c/sdcc_ix/memset.asm (236 B)
+		https://raw.githubusercontent.com/z88dk/z88dk/master/libsrc/_DEVELOPMENT/string/c/sccz80/memset_callee.asm (332 B)
+		https://raw.githubusercontent.com/z88dk/z88dk/master/libsrc/_DEVELOPMENT/string/c/sccz80/memset.asm (576 B)
+		https://raw.githubusercontent.com/z88dk/z88dk/master/libsrc/_DEVELOPMENT/string/z80/asm_memset.asm (1.26 KB)
 	z8k:
 		https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/machine/z8k/memset.S (1.86 KB)
 	generic:
@@ -66,10 +86,15 @@ memset:
 			https://raw.githubusercontent.com/blanham/PDCLib/master/functions/string/memset.c (764 B)
 			https://raw.githubusercontent.com/NuxiNL/cloudlibc/master/src/libc/string/memset.c (775 B)
 		notDone:
+			https://raw.githubusercontent.com/KnightOS/libc/master/src/string.c (120 B)
+			https://raw.githubusercontent.com/lkundrak/dev86/master/libc/string/string.c (165 B)
+			https://raw.githubusercontent.com/itszor/gcc-6502-bits/master/libtinyc/memset.c (192 B)
+			https://raw.githubusercontent.com/KnightOS/kcc/master/device/lib/_memset.c (229 B)
 			https://en.wikibooks.org/wiki/C_Programming/String_manipulation#The_memset_function (232 B)
 			https://raw.githubusercontent.com/dryc/libc11/master/src/string/memset.c (481 B)
-			https://github.com/bminor/SDL/blob/master/src/stdlib/SDL_string.c (1.4 KB)
+			https://raw.githubusercontent.com/bminor/SDL/master/src/stdlib/SDL_string.c (1.4 KB)
 			https://raw.githubusercontent.com/bminor/newlib/master/newlib/libc/string/memset.c (2.03 KB)
+			https://raw.githubusercontent.com/open-watcom/open-watcom-v2/master/bld/clib/memory/c/memcpy.c (2.03 KB)
 			https://git.musl-libc.org/cgit/musl/plain/src/string/memset.c (2.16 KB)
 			https://raw.githubusercontent.com/wbx-github/uclibc-ng/master/libc/string/generic/memset.c (2.17 KB)
 			https://gitlab.com/sortix/sortix/raw/master/libc/string/memset.c (2.21 KB)
