Added some stuff to TODO.txt
Signed-off-by: Gabriel Ravier <gabravier@gmail.com>

--- a/TODO.txt
+++ b/TODO.txt
@@ -287,3 +287,7 @@ tolower:
 toupper:
 bitTwiddlingAlgos:
 runtimeStuff:
+HackersDelight:
+vectorizedPopcount:
+vectorizedBuiltins:
+vectorizedEverything:
